# agentskills

./: .gitignore  CHANGELOG.md  PR_BODY.md  README.md
docs/: architecture.mdx  docs.json  (+1 more)
skills-ref/: NEXT-STEPS.md  pyproject.toml
skills-ref/examples/: auth_capabilities.py  skill_catalog.py  test_skill_composition.py
skills-ref/examples/skills/compose-validator/: SKILL.md
skills-ref/examples/skills/compose-validator/scripts/: run.py
skills-ref/examples/skills/customer-intel/: SKILL.md
skills-ref/examples/skills/daily-synthesis/: SKILL.md
skills-ref/examples/skills/demo-echo/: SKILL.md
skills-ref/examples/skills/demo-echo/scripts/: run.py
skills-ref/examples/skills/email-read/: SKILL.md
skills-ref/examples/skills/email-read/scripts/: run.py
skills-ref/examples/skills/github-repos/: SKILL.md
skills-ref/examples/skills/github-repos/scripts/: run.py
skills-ref/examples/skills/hubspot-companies/: SKILL.md
skills-ref/examples/skills/hubspot-companies/scripts/: run.py
skills-ref/examples/skills/hubspot-deals/: SKILL.md
skills-ref/examples/skills/hubspot-deals/scripts/: run.py
skills-ref/examples/skills/hubspot-read/: SKILL.md
skills-ref/examples/skills/hubspot-read/scripts/: run.py
skills-ref/examples/skills/slack-read/: SKILL.md
skills-ref/examples/skills/slack-read/scripts/: run.py
skills-ref/src/skills_ref/: __init__.py  cli.py  composition.py  graph.py  models.py  parser.py  runtime.py  validator.py
skills-ref/tests/: test_chain.py  test_composition.py  test_graph.py  test_integration.py  test_runtime.py  test_validator.py
(+19 files in other folders)
